# blackbox

./: .dockerignore  .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  BUILD_PLAN.md  CLAUDE.md  DEMO.md  DESIGN.md  Dockerfile  README.md  dev.sh  fuse_breaker_prompts.py  generate_demo.ipynb  html_helpers.py  package-lock.json  package.json  pyproject.toml  requirements.txt  sashiLog.md
.github/workflows/: ci.yml
agent/: __init__.py  ap_graph.py  ap_scenarios.py  benchmark.py  capture.py  code_graph.py  code_monitor.py  code_scenarios.py  converge_ap.py  converge_code.py  faults.py  graph.py  instrument.py  llm.py  monitor.py  otel.py  run.py  run_ap.py  run_ap_suite.py  run_code.py  smoke.py  store.py  subject_agent.py  tools.py  tracing.py
agent/ap/: converge.py  export_run.py  graph.py  monitor.py  run.py  run_suite.py  scenarios.py
agent/code/: converge.py  export_run.py  graph.py  monitor.py  run.py  scenarios.py
agent/domains/: __init__.py  arize_export.py  engine.py  export_run.py  pipelines.py
agent/flight/: arize_export.py  benchmark.py  export_run.py  faults.py  graph.py  run.py  tools.py
agent/team/: export_run.py  graph.py  monitor.py  oracle.py  run.py  scenarios.py  source.py
api/: main.py  sentry_issue.py
attribution/: __init__.py  cache.py  judges.py  localize.py  main.py  provenance.py  rationale.py  regression.py
eval/: ap_oracle.py  arize_evals.py  arize_pipeline.py  code_oracle.py  domains_arize_evals.py  domains_arize_pipeline.py  metrics.py  oracle.py
replay/: __init__.py  confirm.py  fork.py  intervene.py  replay.py
shared/: __init__.py  load.py  schema.py
shared/fixtures/: .judge_cache.json  README.md  flight_fail.json
shared/scenarios/: manifest.py
src/: index.css
tests/: test_api_run.py  test_claim_export.py  test_code_export.py  test_code_graph.py  test_code_llm_parse.py  test_code_monitor.py  test_code_oracle.py  test_code_replay.py  test_code_scenarios.py  test_converge_code.py  test_domains.py  test_domains_arize.py  test_flight_arize_export.py  test_flight_export.py  test_team_api.py  test_team_export.py  test_team_graph.py  test_team_live_wiring.py  test_team_monitor.py  test_team_natural.py  test_team_oracle.py  test_team_run.py  test_team_scenarios.py
web/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
(+160 files in other folders)
