[project]
name = "blackbox"
version = "0.1.0"
description = "Causal debugger for AI agents — localize the earliest wrong step and prove it by replay."
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "sse-starlette>=2.1",
    "redis>=5.0",
    "anthropic>=0.34",
    "python-dotenv>=1.0",
    "networkx>=3.0",
    "langgraph>=0.2",
    "langchain-core>=0.3",
    # tracing
    "openinference-instrumentation-langchain>=0.1",
    "openinference-instrumentation-anthropic>=0.1",
    "arize-otel>=0.7",
    "arize-phoenix>=4.0",
    "arize>=7.0",
    "opentelemetry-sdk>=1.25",
    "opentelemetry-exporter-otlp-proto-http>=1.25",
    # web agent
    "stagehand-py>=0.1; python_version >= '3.11'",
    # error surface
    "sentry-sdk>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.5", "mypy>=1.10"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
pythonpath = ["."]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
# Python backend packages only — exclude the web/ frontend and the test suite.
include = ["agent*", "shared*", "replay*", "attribution*", "api*", "eval*"]
exclude = ["web*", "tests*"]
